# otaru-app

backend/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2587b67c108e_create_users_table.py  9ac8bf82ef75_update_users_table.py  e01a2690481b_update_users_table.py
backend/api/: db.py  main.py  migrate_db.py
backend/api/cruds/: user.py
backend/api/models/: user.py
backend/api/routers/: login.py  register.py  user.py
backend/api/schemas/: user.py
backend/api/services/: user_service.py
backend/tests/: conftest.py
backend/tests/unit_test/: test_login.py  test_register.py
frontend/: package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/components/store/: store.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
